@@ -18,3 +18,4 @@ require_relative "simplify/replace_values_with_constants"
 require_relative "simplify/sort_into_calculation_order"
 require_relative "simplify/replace_arithmetic_on_ranges"
 require_relative "simplify/wrap_formulae_that_return_arrays_and_are_not_in_arrays"
+require_relative "simplify/replace_string_join_on_ranges"
